# ChanWyckoff-Mainline

./: .gitignore  README.md
systems/chanwyckoff-mainline/backend/: .env.example  alembic.ini  pyproject.toml
systems/chanwyckoff-mainline/backend/alembic/: env.py
systems/chanwyckoff-mainline/backend/alembic/versions/: 0001_initial_schema.py  0002_market_data_schema.py  0003_signal_review_schema.py
systems/chanwyckoff-mainline/backend/app/: __init__.py  main.py
systems/chanwyckoff-mainline/backend/app/api/: backtests.py  dashboard.py  health.py  operations.py  reviews.py  router.py  signals.py  stock_pool.py
systems/chanwyckoff-mainline/backend/app/backtest/: __init__.py  engine.py
systems/chanwyckoff-mainline/backend/app/core/: config.py
systems/chanwyckoff-mainline/backend/app/dashboard/: __init__.py  db_snapshot.py  snapshot.py
systems/chanwyckoff-mainline/backend/app/db/: base.py  (+1 more)
systems/chanwyckoff-mainline/backend/tests/: test_akshare_theme_provider.py  test_backtest_api.py  test_backtest_engine.py  test_dashboard_api.py  test_dashboard_db_snapshot.py  test_dashboard_snapshot.py  test_health.py  test_index_bars_pipeline.py  test_market_bars_pipeline.py  test_market_data_ingestion.py  test_market_regime.py  test_operations_api.py  test_review_api.py  test_signal_detail_api.py  test_signal_review.py  test_stock_pool.py  test_stock_pool_api.py  test_structure_recognition.py  test_tdx_snapshot_pipeline.py  test_tdx_snapshot_provider.py  test_theme_ingestion_pipeline.py  test_theme_strength.py  test_third_buy_state_machine.py  test_tickflow_provider.py
(+66 files in other folders)
