[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chanwyckoff-mainline-backend"
version = "0.1.0"
description = "FastAPI backend for ChanWyckoff Mainline"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "pandas>=2.2.3",
  "pydantic-settings>=2.5.2",
  "polars>=1.9.0",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
